--- a/.travis.yml
+++ b/.travis.yml
@@ -88,7 +88,7 @@ before_install:
       echo "nameserver 169.254.169.254" | sudo tee /etc/resolv.conf
       echo "search google.internal" | sudo tee -a /etc/resolv.conf
     else
-      sudo cp -f /run/systemd/resolve/resolv.conf /etc/resolv.conf
+      sudo cp -f /run/systemd/resolve/resolv.conf /etc/resolv.conf || true
     fi
   - cat /etc/resolv.conf
   # - cat /etc/resolv.conf
