--- a/.travis.yml
+++ b/.travis.yml
@@ -154,7 +154,7 @@ install:
   - sudo sed -i "s#^LNMP_CN_ENV=.*#LNMP_CN_ENV=false#g" ./.env
 
   - travis_retry ./lnmp-k8s kubernetes-server ${LNMP_K8S_GET}
-  - ./lnmp-k8s local-install ${LNMP_K8S_LOCAL_INSTALL_OPTIONS:-}
+  - debug=1 ./lnmp-k8s local-install ${LNMP_K8S_LOCAL_INSTALL_OPTIONS:-}
   # - debug=1 ./lnmp-k8s local-install ${LNMP_K8S_LOCAL_INSTALL_OPTIONS:-}
 
   - export PATH=$PATH:${K8S_ROOT:-/opt/k8s}/bin
